# OpenALpp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: code_coverage.yml  test_verification.yml
ext/: CMakeLists.txt
ext/approvaltestscpp/: CMakeLists.txt
ext/catch2/: CMakeLists.txt
ext/dj_fft/: dj_fft.h
ext/libnyquist/: CMakeLists.txt
ext/openal-soft/: CMakeLists.txt
ext/stb_vorbis/: stb_vorbis.hpp
impl/: CMakeLists.txt  al.hpp  alc.hpp  audio_exceptions.hpp  filter.cpp  filter.hpp  low_level_frickel.cpp  low_level_frickel.hpp  main.cpp  sound.cpp  sound.hpp  sound_context.cpp  sound_context.hpp  sound_data.cpp  sound_data.hpp  sound_data_interface.hpp
impl/oalpp/: alc.hpp  sound.cpp  sound.hpp  sound_context.cpp  sound_context.hpp  sound_data.cpp  sound_data.hpp  sound_data_with_effect.cpp  sound_data_with_effect.hpp
impl/oalpp/common/: audio_exceptions.cpp  audio_exceptions.hpp
impl/oalpp/effects/: effect_interface.hpp  mono_effect_bulk.hpp  mono_effect_interface.hpp  mono_effect_iterative.hpp
impl/oalpp/effects/distortion/: decimator.cpp  decimator.hpp  tanh_distortion.cpp  tanh_distortion.hpp
impl/oalpp/effects/filter/: butterworth_24db_highpass.cpp  butterworth_24db_highpass.hpp  butterworth_24db_lowpass.cpp  butterworth_24db_lowpass.hpp  filter_butter_worth_24_d_b.cpp  filter_butter_worth_24_d_b.hpp  filter_butterworth_24_d_b.cpp  filter_butterworth_24_d_b.hpp  moog_filter_stilson.cpp  moog_filter_stilson.hpp  random_lowpass.cpp  random_lowpass.hpp  simple_highpass.cpp  simple_highpass.hpp  simple_lowpass.cpp  simple_lowpass.hpp
impl/oalpp/effects/utility/: convolution.cpp  convolution.hpp  dj_fft.h  effect_chain.cpp  effect_chain.hpp  gain.cpp  gain.hpp  phase_flip.cpp  phase_flip.hpp
impl/oalpp/sound/: position.cpp  position.hpp  sound.cpp  sound.hpp
impl/oalpp/sound_context/: sound_context.cpp  sound_context.hpp  sound_context_interface.hpp
impl/oalpp/sound_data/: sound_data.cpp  sound_data.hpp  sound_data_builder.cpp  sound_data_builder.hpp  sound_data_helper.cpp  sound_data_helper.hpp  sound_data_interface.hpp  sound_data_left_to_mono.cpp  sound_data_left_to_mono.hpp  sound_data_mid_to_mono.cpp  sound_data_mid_to_mono.hpp  sound_data_mono_to_stereo.cpp  sound_data_mono_to_stereo.hpp  sound_data_right_to_mono.cpp  sound_data_right_to_mono.hpp  sound_data_side_to_mono.cpp  sound_data_side_to_mono.hpp  sound_data_text_writer.cpp  sound_data_text_writer.hpp  sound_data_with_effect.cpp  sound_data_with_effect.hpp
test/: CMakeLists.txt
test/approval_tests/: CMakeLists.txt  approval_test_helpers.cpp  approval_test_helpers.hpp  catch2_starter_test.cpp  effect_convolution_test.cpp  effect_gain_test.cpp  effect_phase_flip_test.cpp  main.cpp
test/approval_tests/approval_tests/: effect_convolution_test.convolution.approved.txt  effect_gain_test.effect_gain.1.0.approved.txt  effect_gain_test.effect_gain.2.0.approved.txt  effect_gain_test.gain.1.0.approved.txt  effect_gain_test.gain.2.0.approved.txt  effect_phase_flip_test.phase_flip.approved.txt
test/integration/: CMakeLists.txt  main.cpp
test/integration_tests/: CMakeLists.txt  main.cpp
test/unit_tests/: CMakeLists.txt  audio_exceptions_test.cpp  main.cpp  sound_context_test.cpp  sound_data_builder_test.cpp  sound_data_channel_conversion_test.cpp  sound_data_fake.cpp  sound_data_fake.hpp  sound_data_test.cpp  sound_effects_test.cpp  sound_test.cpp
